@@ -16,7 +16,6 @@
 package org.talend.sdk.component.form.internal.validation.spi.ext;
 
 import static java.util.Comparator.comparing;
-import static java.util.stream.Collectors.toList;
 
 import java.util.Collection;
 import java.util.Optional;
@@ -38,12 +37,12 @@ public class TypeValidation implements ValidationExtension {
     @Override
     public Optional<Function<JsonValue, Stream<ValidationError>>> create(final ValidationContext model) {
         final JsonValue value = model.getSchema().get("type");
-        if (JsonString.class.isInstance(value)) {
+        if (value instanceof JsonString jsonString) {
             return Optional
                     .of(new Impl(model.toPointer(), model.getValueProvider(),
-                            mapType(JsonString.class.cast(value)).toArray(JsonValue.ValueType[]::new)));
+                            mapType(jsonString).toArray(JsonValue.ValueType[]::new)));
         }
-        if (JsonArray.class.isInstance(value)) {
+        if (value instanceof JsonArray) {
             return Optional
                     .of(new Impl(model.toPointer(), model.getValueProvider(),
                             value.asJsonArray().stream().flatMap(this::mapType).toArray(JsonValue.ValueType[]::new)));
@@ -53,7 +52,7 @@ public class TypeValidation implements ValidationExtension {
     }
 
     private Stream<? extends JsonValue.ValueType> mapType(final JsonValue value) {
-        switch (JsonString.class.cast(value).getString()) {
+        switch (((JsonString) value).getString()) {
             case "null":
                 return Stream.of(JsonValue.ValueType.NULL);
             case "string":
@@ -83,7 +82,7 @@ public class TypeValidation implements ValidationExtension {
                     .concat(Stream.of(types), Stream.of(JsonValue.ValueType.NULL))
                     .distinct()
                     .sorted(comparing(JsonValue.ValueType::name))
-                    .collect(toList());
+                    .toList();
         }
 
         @Override
