@@ -15,8 +15,6 @@
  */
 package org.talend.sdk.component.runtime.visitor;
 
-import static java.util.stream.Collectors.toList;
-
 import java.lang.annotation.Annotation;
 import java.lang.reflect.Method;
 import java.lang.reflect.Parameter;
@@ -129,18 +127,17 @@ public class ModelVisitor {
                 throw new IllegalArgumentException(m + " must not have any parameter without @PartitionSize");
             }
             final Type splitReturnType = m.getGenericReturnType();
-            if (!ParameterizedType.class.isInstance(splitReturnType)) {
+            if (!(splitReturnType instanceof ParameterizedType splitPt)) {
                 throw new IllegalArgumentException(m + " must return a Collection<" + type.getName() + ">");
             }
 
-            final ParameterizedType splitPt = ParameterizedType.class.cast(splitReturnType);
-            if (!Class.class.isInstance(splitPt.getRawType())
-                    || !Collection.class.isAssignableFrom(Class.class.cast(splitPt.getRawType()))) {
+            if (!(splitPt.getRawType() instanceof Class clazz)
+                    || !Collection.class.isAssignableFrom(clazz)) {
                 throw new IllegalArgumentException(m + " must return a List of partition mapper, found: " + splitPt);
             }
 
             final Type arg = splitPt.getActualTypeArguments().length != 1 ? null : splitPt.getActualTypeArguments()[0];
-            if (!Class.class.isInstance(arg) || !type.isAssignableFrom(Class.class.cast(arg))) {
+            if (!(arg instanceof Class aClass) || !type.isAssignableFrom(aClass)) {
                 throw new IllegalArgumentException(
                         m + " must return a Collection<" + type.getName() + "> but found: " + arg);
             }
@@ -162,7 +159,7 @@ public class ModelVisitor {
 
     private void validateEmitter(final Class<?> input) {
         final List<Method> producers =
-                Stream.of(input.getMethods()).filter(m -> m.isAnnotationPresent(Producer.class)).collect(toList());
+                Stream.of(input.getMethods()).filter(m -> m.isAnnotationPresent(Producer.class)).toList();
         if (producers.size() != 1) {
             throw new IllegalArgumentException(input + " must have a single @Producer method");
         }
@@ -179,7 +176,7 @@ public class ModelVisitor {
         final List<Method> driverRunners = Stream
                 .of(standalone.getMethods())
                 .filter(m -> m.isAnnotationPresent(RunAtDriver.class))
-                .collect(toList());
+                .toList();
         if (driverRunners.size() != 1) {
             throw new IllegalArgumentException(standalone + " must have a single @RunAtDriver method");
         }
@@ -194,7 +191,7 @@ public class ModelVisitor {
 
     private void validateProcessor(final Class<?> input) {
         final List<Method> afterGroups =
-                Stream.of(input.getMethods()).filter(m -> m.isAnnotationPresent(AfterGroup.class)).collect(toList());
+                Stream.of(input.getMethods()).filter(m -> m.isAnnotationPresent(AfterGroup.class)).toList();
         afterGroups.forEach(m -> {
             final List<Parameter> invalidParams = Stream.of(m.getParameters()).peek(p -> {
                 if (p.isAnnotationPresent(Output.class) && !validOutputParam(p)) {
@@ -204,7 +201,7 @@ public class ModelVisitor {
                     .filter(p -> !p.isAnnotationPresent(Output.class))
                     .filter(p -> !p.isAnnotationPresent(LastGroup.class))
                     .filter(p -> !Parameters.isGroupBuffer(p.getParameterizedType()))
-                    .collect(toList());
+                    .toList();
             if (!invalidParams.isEmpty()) {
                 throw new IllegalArgumentException("Parameter of AfterGroup method need to be annotated with Output");
             }
@@ -233,7 +230,7 @@ public class ModelVisitor {
         final List<Method> producers = Stream
                 .of(input.getMethods())
                 .filter(m -> m.isAnnotationPresent(ElementListener.class))
-                .collect(toList());
+                .toList();
         if (producers.size() > 1) {
             throw new IllegalArgumentException(input + " must have a single @ElementListener method");
         }
@@ -254,10 +251,9 @@ public class ModelVisitor {
     }
 
     private boolean validOutputParam(final Parameter p) {
-        if (!ParameterizedType.class.isInstance(p.getParameterizedType())) {
+        if (!(p.getParameterizedType() instanceof ParameterizedType pt)) {
             return false;
         }
-        final ParameterizedType pt = ParameterizedType.class.cast(p.getParameterizedType());
         return OutputEmitter.class == pt.getRawType();
     }
 
@@ -274,7 +270,7 @@ public class ModelVisitor {
         List<Method> markedMethods = Stream
                 .of(type.getMethods())
                 .filter(m -> m.isAnnotationPresent(AfterVariableContainer.class))
-                .collect(toList());
+                .toList();
         if (markedMethods.size() > 1) {
             String methods = markedMethods.stream().map(Method::toGenericString).collect(Collectors.joining(","));
             throw new IllegalArgumentException("The methods can't have more than 1 after variable container. "
@@ -314,16 +310,15 @@ public class ModelVisitor {
      * Where the key is String and value is Object
      */
     private static boolean isValidAfterVariableContainer(final Type type) {
-        if (!(type instanceof ParameterizedType)) {
+        if (!(type instanceof ParameterizedType paramType)) {
             return false;
         }
 
-        final ParameterizedType paramType = (ParameterizedType) type;
-        if (!(paramType.getRawType() instanceof Class) || paramType.getActualTypeArguments().length != 2) {
+        if (!(paramType.getRawType() instanceof Class<?> containerType)
+                || paramType.getActualTypeArguments().length != 2) {
             return false;
         }
 
-        final Class<?> containerType = (Class<?>) paramType.getRawType();
         return Map.class.isAssignableFrom(containerType) && paramType.getActualTypeArguments()[0].equals(String.class)
                 && paramType.getActualTypeArguments()[1].equals(Object.class);
     }
@@ -334,7 +329,7 @@ public class ModelVisitor {
                 .filter(annotation -> !SUPPORTED_AFTER_VARIABLES_TYPES.contains(annotation.type()))
                 .map(annotation -> "The after variable with name '" + annotation.value() + "' has incorrect type: '"
                         + annotation.type() + "'")
-                .collect(toList());
+                .toList();
         if (!incorrectDeclarations.isEmpty()) {
             String message = incorrectDeclarations
                     .stream()
