@@ -16,7 +16,6 @@
 package org.talend.sdk.component.runtime.manager.chain.internal;
 
 import static java.util.Collections.singletonList;
-import static java.util.stream.Collectors.toList;
 import static java.util.stream.Collectors.toMap;
 import static java.util.stream.Collectors.toSet;
 
@@ -149,7 +148,7 @@ public class JobImpl implements Job {
                     .filter(n -> edges
                             .stream()
                             .noneMatch(l -> l.getFrom().getNode().equals(n) || l.getTo().getNode().equals(n)))
-                    .collect(toList());
+                    .toList();
             orphans.forEach(o -> log.warn("component '" + o + "' is orphan in this graph. it will be ignored."));
             nodes.removeAll(orphans);
 
@@ -182,7 +181,7 @@ public class JobImpl implements Job {
                             .filter(others -> edge.getTo().getNode().equals(others.getTo().getNode()))
                             .map(others -> others.getFrom().getNode())
                             .allMatch(startingNodes::contains))
-                    .collect(toList());
+                    .toList();
             if (level.isEmpty()) {
                 throw new IllegalStateException("the job pipeline has cyclic connection");
             }
@@ -258,12 +257,12 @@ public class JobImpl implements Job {
         public void run() {
             ExecutorBuilder runner = this;
             final Object o = jobProperties.get(ExecutorBuilder.class.getName());
-            if (ExecutorBuilder.class.isInstance(o)) {
-                runner = ExecutorBuilder.class.cast(o);
-            } else if (Class.class.isInstance(o)) {
-                runner = newRunner(Class.class.cast(o));
-            } else if (String.class.isInstance(o)) {
-                final String name = String.class.cast(o).trim();
+            if (o instanceof ExecutorBuilder executorBuilder) {
+                runner = executorBuilder;
+            } else if (o instanceof Class aClass) {
+                runner = newRunner(aClass);
+            } else if (o instanceof String string) {
+                final String name = string.trim();
                 if (!"standalone".equalsIgnoreCase(name) && !"default".equalsIgnoreCase(name)
                         && !"local".equalsIgnoreCase(name)) {
                     if ("beam".equalsIgnoreCase(name)) {
@@ -301,7 +300,7 @@ public class JobImpl implements Job {
             }
 
             if (runner == this) {
-                JobExecutor.class.cast(runner).localRun();
+                ((JobExecutor) runner).localRun();
             } else {
                 runner.run();
             }
@@ -356,9 +355,8 @@ public class JobImpl implements Job {
                                 .orElseThrow(() -> new IllegalStateException(
                                         "No processor found for:" + component.getNode()));
                         final AtomicInteger maxBatchSize = new AtomicInteger(1);
-                        if (ProcessorImpl.class.isInstance(processor)) {
-                            ProcessorImpl.class
-                                    .cast(processor)
+                        if (processor instanceof ProcessorImpl processor1) {
+                            processor1
                                     .getInternalConfiguration()
                                     .entrySet()
                                     .stream()
@@ -534,20 +532,20 @@ public class JobImpl implements Job {
 
         private List<Job.Edge> getConnections(final List<Job.Edge> edges, final Job.Component step,
                 final Function<Edge, Component> direction) {
-            return edges.stream().filter(edge -> direction.apply(edge).equals(step)).collect(toList());
+            return edges.stream().filter(edge -> direction.apply(edge).equals(step)).toList();
         }
 
         public GroupKeyProvider getKeyProvider(final String componentId) {
             if (componentProperties.get(componentId) != null) {
                 final Object o = componentProperties.get(componentId).get(GroupKeyProvider.class.getName());
-                if (GroupKeyProvider.class.isInstance(o)) {
-                    return new GroupKeyProviderImpl(GroupKeyProvider.class.cast(o));
+                if (o instanceof GroupKeyProvider groupKeyProvider) {
+                    return new GroupKeyProviderImpl(groupKeyProvider);
                 }
             }
 
             final Object o = jobProperties.get(GroupKeyProvider.class.getName());
-            if (GroupKeyProvider.class.isInstance(o)) {
-                return new GroupKeyProviderImpl(GroupKeyProvider.class.cast(o));
+            if (o instanceof GroupKeyProvider groupKeyProvider) {
+                return new GroupKeyProviderImpl(groupKeyProvider);
             }
 
             final ServiceLoader<GroupKeyProvider> services = ServiceLoader.load(GroupKeyProvider.class);
@@ -632,7 +630,7 @@ public class JobImpl implements Job {
                 return null;
             }
             currentRecords++;
-            return Record.class.cast(next);
+            return (Record) next;
         }
 
         public void stop() {
@@ -685,9 +683,8 @@ public class JobImpl implements Job {
                 outputs
                         .computeIfAbsent(name, k -> new ArrayList<>())
                         .add(new RecordConverters()
-                                .toRecord(registry, value, () -> Jsonb.class.cast(services.get(Jsonb.class)),
-                                        () -> RecordBuilderFactory.class
-                                                .cast(services.get(RecordBuilderFactory.class))));
+                                .toRecord(registry, value, () -> (Jsonb) services.get(Jsonb.class),
+                                        () -> (RecordBuilderFactory) services.get(RecordBuilderFactory.class)));
             }
         }
     }
@@ -717,7 +714,7 @@ public class JobImpl implements Job {
         }
 
         private Object map(final Object next) {
-            if (next == null || Record.class.isInstance(next)) {
+            if (next == null || next instanceof Record) {
                 return next;
             }
 
