@@ -15,7 +15,6 @@
  */
 package org.talend.sdk.component.server.tomcat;
 
-import static java.util.stream.Collectors.toList;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
@@ -55,7 +54,7 @@ class GenerateCertificateAndActivateHttpsTest {
                 return (Runnable) () -> System.clearProperty(it.getKey());
             }
             return (Runnable) () -> System.setProperty(it.getKey(), property);
-        }).collect(toList());
+        }).toList();
         try {
             final Meecrowave.Builder builder = new Meecrowave.Builder();
             assertTrue(cert.exists());
@@ -77,9 +76,9 @@ class GenerateCertificateAndActivateHttpsTest {
             keyStore.load(inputStream, builder.getKeystorePass().toCharArray());
         }
         final Key key = keyStore.getKey(builder.getKeyAlias(), builder.getKeystorePass().toCharArray());
-        assertTrue(PrivateKey.class.isInstance(key));
+        assertTrue(key instanceof PrivateKey);
         final Certificate certificate = keyStore.getCertificate(builder.getKeyAlias());
-        assertTrue(X509Certificate.class.isInstance(certificate));
+        assertTrue(certificate instanceof X509Certificate);
         final Certificate[] chain = keyStore.getCertificateChain(builder.getKeyAlias());
         assertEquals(1, chain.length);
         assertEquals(certificate, chain[0]);
