@@ -61,9 +61,8 @@ public class MockTableService {
         try {
             client.healthCheck(dt.getAuthorizationHeader());
         } catch (Exception e) {
-            if (HttpException.class.isInstance(e)) {
-                final HttpException ex = HttpException.class.cast(e);
-                final JsonObject jError = JsonObject.class.cast(ex.getResponse().error(JsonObject.class));
+            if (e instanceof HttpException ex) {
+                final JsonObject jError = (JsonObject) ex.getResponse().error(JsonObject.class);
                 String errorMessage = null;
                 if (jError != null && jError.containsKey("error")) {
                     final JsonObject error = jError.get("error").asJsonObject();
@@ -99,7 +98,7 @@ public class MockTableService {
         return new Values(Stream
                 .of(QueryBuilder.Fields.values())
                 .map(f -> new Values.Item(f.name(), f.name()))
-                .collect(toList()));
+                .toList());
     }
 
     public interface Client extends HttpClient {
