@@ -222,7 +222,7 @@ public class VaultClient {
                 .stream()
                 .filter(entry -> compiledPassthroughRegex.matcher(entry.getValue()).matches())
                 .map(cyphered -> cyphered.getKey())
-                .collect(toList());
+                .toList();
         if (cipheredKeys.isEmpty()) {
             return values;
         }
@@ -232,7 +232,7 @@ public class VaultClient {
 
     private CompletableFuture<Map<String, String>> prepareRequest(final Map<String, String> values,
             final List<String> cipheredKeys, final String tenantId) {
-        return get(cipheredKeys.stream().map(values::get).collect(toList()), clock.millis(), tenantId)
+        return get(cipheredKeys.stream().map(values::get).toList(), clock.millis(), tenantId)
                 .thenApply(decrypted -> values
                         .entrySet()
                         .stream()
@@ -251,13 +251,13 @@ public class VaultClient {
                 .stream()
                 .map(it -> new EntryWithIndex<>(index.getAndIncrement(), it))
                 .filter(it -> it.entry != null && !compiledPassthroughRegex.matcher(it.entry).matches())
-                .collect(toList());
+                .toList();
         if (clearValues.isEmpty()) {
             return doDecipher(values, currentTime, tenantId).toCompletableFuture();
         }
         if (clearValues.size() == values.size()) {
             final long now = clock.millis();
-            return completedFuture(values.stream().map(it -> new DecryptedValue(it, now)).collect(toList()));
+            return completedFuture(values.stream().map(it -> new DecryptedValue(it, now)).toList());
         }
         return doDecipher(values, currentTime, tenantId).thenApply(deciphered -> {
             final long now = clock.millis();
@@ -275,9 +275,9 @@ public class VaultClient {
                 .stream()
                 .filter(it -> !it.getValue().isPresent())
                 .map(Map.Entry::getKey)
-                .collect(toList());
+                .toList();
         if (missing.isEmpty()) { // no remote call, yeah
-            return completedFuture(values.stream().map(alreadyCached::get).map(Optional::get).collect(toList()));
+            return completedFuture(values.stream().map(alreadyCached::get).map(Optional::get).toList());
         }
         // do request
         return getOrRequestAuth()
@@ -336,11 +336,10 @@ public class VaultClient {
                                 final Throwable cause = unwrap(e);
                                 String message = "";
                                 int status = cantDecipherStatusCode;
-                                if (WebApplicationException.class.isInstance(cause)) {
-                                    final WebApplicationException wae = WebApplicationException.class.cast(cause);
+                                if (cause instanceof WebApplicationException wae) {
                                     final Response response = wae.getResponse();
                                     if (response != null) {
-                                        if (ErrorPayload.class.isInstance(response.getEntity())) { // internal error
+                                        if (response.getEntity() instanceof ErrorPayload) { // internal error
                                             throw wae;
                                         } else {
                                             try {
@@ -488,12 +487,10 @@ public class VaultClient {
                 : new IllegalStateException("Unknown error (null cause)");
         String message = "";
         int status = cantDecipherStatusCode;
-        if (WebApplicationException.class.isInstance(safeCause)) {
-            final WebApplicationException wae = WebApplicationException.class.cast(safeCause);
+        if (safeCause instanceof WebApplicationException wae) {
             final Response response = wae.getResponse();
             if (response != null) {
-                status = response.getStatus();
-                if (ErrorPayload.class.isInstance(response.getEntity())) { // internal error
+                if (response.getEntity() instanceof ErrorPayload) { // internal error
                     throw wae;
                 } else {
                     try {
